<resources>
    <string name="app_name">Mastery</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="Skills">Skills</string>
    <string name="SkillGroups">Skill Groups</string>
    <string name="Schedules">Practice Schedules</string>
    <string name="Settings">Settings</string>

    <string name="title_skill_list">Skills</string>
    <string name="title_skill_detail">Skill Details</string>
    <string name="add_skill">Add Skill</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="name">Name:</string>
    <string name="saved_skill">Skill updated</string>
    <string name="added_skill">Skill added</string>

    <string name="saved_schedule">Schedule updated</string>
    <string name="added_schedule">Schedule added</string>

    <string name="title_skill_group_list">Skill groups</string>
    <string name="select_skill_group_title">Select skill group</string>
    <string name="title_skill_group_detail">Skill Group Details</string>
    <string name="add_skill_group">Add Skill Group</string>
    <string name="saved_skill_group">Skill group updated</string>
    <string name="added_skill_group">Skill group added</string>

    <string name="last_practiced_never">Not practiced yet</string>
    <string name="last_practiced_recently">Recently practiced</string>
    <plurals name="last_practiced_days">
        <item quantity="one">Last practiced %d day ago</item>
        <item quantity="other">Last practiced %d days ago</item>
    </plurals>
    <plurals name="last_practiced_weeks">
        <item quantity="one">Last practiced %d week ago</item>
        <item quantity="other">Last practiced %d weeks ago</item>
    </plurals>
    <plurals name="last_practiced_months">
        <item quantity="one">Last practiced %d month ago</item>
        <item quantity="other">Last practiced %d months ago</item>
    </plurals>

    <string name="practice_priority">Priority</string>
    <string name="practice_priority_detail">Skills with higher priority will be scheduled for practice more often.</string>


    <string name="discard_edits_title">Discard changes?</string>
    <string name="discard_edits_question">You have unsaved changes.  Do you want to discard them?</string>

    <string name="missing_skill_name_title">Skill name empty</string>
    <string name="missing_skill_name_detail">Please enter a name for this skill.</string>

    <string name="missing_schedule_name_title">Schedule name empty</string>
    <string name="missing_schedule_name_detail">Please enter a name for this schedule.</string>

    <string name="no_skill_groups_title">No skill groups</string>
    <string name="no_skill_groups_detail">Skills are scheduled for practice through their membership in groups.  Please add this skill to one or more groups.</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

    <string name="skill_in_groups_title">Skill groups</string>
    <string name="skill_in_groups_detail">This skill can be scheduled for slots with the following groups.</string>
    <string name="parent_groups_title">Parent groups</string>
    <string name="parent_groups_detail">Skills in this group will also be in the parent groups.</string>

    <string name="skill_self_parent">Skill group cannot be its own parent.</string>
    <string name="skill_group_already_present">Skill already in selected group.</string>
    <string name="skill_group_removed">Skill group removed.</string>
    <string name="skill_group_cycle_title">Skill Group Cycle Error</string>
    <string name="skill_group_cycle_detail">The requested action would create a parenthood cycle.</string>

    <string name="delete_skill">Delete skill</string>
    <string name="delete_skill_confirm_title">Delete skill?</string>
    <string name="cannot_undo_detail">This action cannot be undone.</string>

    <string name="delete_skill_group">Delete skill group</string>
    <string name="delete_skill_group_confirm_title">Delete skill group?</string>
    <string name="delete_skill_group_confirm_detail">
        To delete this skill group, you must select another group for its skills and slots.
    </string>
    <string name="select_skill_group_replacement">Choose Replacement</string>
    <string name="deleted_skill_group">Deleted skill group.</string>


    <string name="title_schedule_list">Practice Schedules</string>
    <string name="title_schedule_detail">Schedule Details</string>

    <string name="delete_schedule">Delete schedule</string>
    <string name="delete_schedule_confirm_title">Delete schedule?</string>

    <string name="no_schedule_slots_title">Schedule has no slots</string>
    <string name="no_schedule_slots_detail">Add one or more slots to your schedule so they can be filled by skills to practice.</string>

    <string name="revert_changes">Discard changes</string>

    <!-- This should be an abbreviated string to display an amount of time in minutes, e.g., "7 min" -->
    <plurals name="num_min">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>

    <string name="duration_dialog_title">Slot length</string>
    <string name="duration_dialog_detail">Choose the length of this slot in minutes:</string>
    <string name="slot_removed">Slot removed.</string>
    <string name="choose_skill_group">Choose skill group</string>

    <string name="no_slot_group_title">Missing skill group</string>
    <string name="no_slot_group_detail">Every slot must have a skill group.</string>
    <string name="title_activity_session">SessionActivity</string>
    <string name="slot_not_filled">No skills in this group</string>
    <string name="duration">Duration:</string>
    <string name="session_activity_title">Practice session</string>
    <!-- The argument will look like HH:MM:SS or the analogous localized form. -->
    <string name="duration_practiced_text">Total practice time: %1s"</string>

    <string name="play_button_text">Start</string>
    <string name="next_button_text">Next</string>
    <string name="prev_button_text">Previous</string>

    <string name="next_notification_title">Time\'s up!</string>
    <string name="next_notification_text">It\'s time to move on to the next skill.</string>
    <string name="practice_complete_detail">You\'ve finished the last skill in the session.</string>

    <string name="status_notification_title">Practicing</string>

    <string name="cancel_session_title">Stop practicing?</string>
    <string name="cancel_session_detail">Are you sure you want to end this session?</string>

    <string name="staleness_importance_slider_title">Balancing priority and staleness</string>
    <string name="staleness_importance_slider_detail">
        Skills are scheduled based upon their priority and how long it has been since the skill was last practiced.  Select how to weigh these factors:
    </string>
    <item name="staleness_importance_default" format="float" type="string">0.5</item>
    <string-array name="slider_summaries">
        <item>Mostly priority</item>
        <item>More priority than staleness</item>
        <item>Both priority and staleness</item>
        <item>More staleness than priority</item>
        <item>Mostly staleness</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <string name="updated_skill_group">Updated skill group.</string>

    <string name="duplicate_name_title">Duplicate name</string>
    <string name="duplicate_name_detail">This name is already in use.  Please choose another.</string>

    <string name="slots_in_schedule_title">Slots</string>

    <string name="add">add</string>
    <string name="remove">remove</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_scheduling">Scheduling</string>

    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_enable_practice_notifications">Practice timer notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
