<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/view_schedules"
            android:icon="@drawable/ic_playlist_play_black_24dp"
            android:title="@string/Schedules" />
        <item
            android:id="@+id/view_skills"
            android:icon="@drawable/ic_assignment_turned_in_black_24dp"
            android:title="@string/Skills"/>
        <item
            android:id="@+id/view_skill_groups"
            android:icon="@drawable/ic_group_work_black_24dp"
            android:title="@string/SkillGroups" />
        <item
            android:id="@+id/view_preferences"
            android:icon="@drawable/settings"
            android:title="@string/Settings" />
    </group>

</menu>
