<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/skill_detail"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res/us.paskin.mastery">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:padding="@dimen/text_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/HeaderText" />

        <EditText
            android:id="@+id/skill_group_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textCapWords|textAutoCorrect"
            android:padding="@dimen/text_margin" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parent_groups_title"
        style="@style/HeaderText"
        android:padding="@dimen/text_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parent_groups_detail"
        android:padding="@dimen/text_margin" />

    <include
        layout="@layout/editable_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
