<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/skill_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:padding="@dimen/text_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/HeaderText" />

        <EditText
            android:id="@+id/skill_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textCapSentences|textAutoCorrect"
            android:padding="@dimen/text_margin" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/last_practiced"
        android:padding="@dimen/text_margin" />

    <include
        layout="@layout/practice_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skill_in_groups_title"
        style="@style/HeaderText"
        android:padding="@dimen/text_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skill_in_groups_detail"
        android:padding="@dimen/text_margin" />

    <include
        layout="@layout/parent_group_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
