<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="us.paskin.mastery.SessionActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_weight="1">

            <include layout="@layout/session_content" />

    </android.support.v4.widget.NestedScrollView>

        <RelativeLayout
            android:layout_weight="0"
            android:layout_gravity="bottom|center"
            android:gravity="bottom|center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:id="@+id/controls_container">

            <ImageButton
                android:id="@+id/prev_button"
                android:tint="@color/background"
                android:text="@string/prev_button_text"
                android:layout_width="@dimen/control_side"
                android:layout_height="@dimen/control_side"
                android:layout_weight="1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/control_margin"
                android:padding="@dimen/control_padding"
                android:src="@drawable/prev"
                android:scaleType="fitXY"
                android:background="@drawable/control_background"
                android:elevation="@dimen/control_elevation" />
            <!-- TODO in RTL these buttons have confusing icons -->

            <ImageButton
                android:id="@+id/play_pause_button"
                android:tint="@color/background"
                android:text="@string/play_button_text"
                android:layout_width="@dimen/control_side"
                android:layout_height="@dimen/control_side"
                android:layout_weight="1"
                android:layout_toRightOf="@+id/prev_button"
                android:layout_toEndOf="@+id/prev_button"
                android:layout_margin="@dimen/control_margin"
                android:padding="@dimen/control_padding"
                android:src="@drawable/play"
                android:scaleType="fitXY"
                android:background="@drawable/control_background"
                android:elevation="@dimen/control_elevation" />

            <ImageButton
                android:id="@+id/next_button"
                android:tint="@color/background"
                android:text="@string/next_button_text"
                android:layout_width="@dimen/control_side"
                android:layout_height="@dimen/control_side"
                android:layout_weight="1"
                android:layout_toRightOf="@+id/play_pause_button"
                android:layout_toEndOf="@+id/play_pause_button"
                android:layout_margin="@dimen/control_margin"
                android:padding="@dimen/control_padding"
                android:src="@drawable/next"
                android:scaleType="fitXY"
                android:background="@drawable/control_background"
                android:elevation="@dimen/control_elevation" />

        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
